--- a/RPC_Share/HelloWorld.ShareInterface/HelloWorld.ShareInterface.csproj
+++ b/RPC_Share/HelloWorld.ShareInterface/HelloWorld.ShareInterface.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.3.4" />
-    <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.3.4">
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.3.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.3.5" />
+    
   </ItemGroup>
 
 </Project>
