--- a/ServerSide/VisitTracker.Grain/VisitTracker.Grain.csproj
+++ b/ServerSide/VisitTracker.Grain/VisitTracker.Grain.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.3.5">
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.3.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
