--- a/ServerSide/HelloWorld.Grains/HelloWorld.Grains.csproj
+++ b/ServerSide/HelloWorld.Grains/HelloWorld.Grains.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <!--<OrleansCodeGenLogLevel>Trace</OrleansCodeGenLogLevel>-->
+    <OrleansCodeGenLogLevel>Trace</OrleansCodeGenLogLevel>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.0.8" />
+    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.3.5">
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.3.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\RPC_Share\HelloWorld.ShareInterface\HelloWorld.ShareInterface.csproj" />
-    <ProjectReference Include="..\VisitTracker.ShareInterface\VisitTracker.ShareInterface.csproj" />
+    <ProjectReference Include="..\..\RPC_Share\VisitTracker.Interface\VisitTracker.Interface.csproj" />
   </ItemGroup>
 
 </Project>
