Docker Compose configuration
Add images build script

support running on mac

make build script able to push docker registry

docker deployment sample

using mongodb running in docker

update nuget packages

update readme and operation powershell core script

update nuget & much correct docker deployment

update nuget

update deploy script

Add override parameter in deploy script

--- a/ClientSide/WebClientDemo/WebClientDemo.csproj
+++ b/ClientSide/WebClientDemo/WebClientDemo.csproj
@@ -5,6 +5,9 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);NU1608</NoWarn>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>0762a271-ac0c-4b55-8e1a-cafb4a73f2c2</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
