--- a/ServerSide/Grains/MyReminder.Grain/MyReminder.Grain.csproj
+++ b/ServerSide/Grains/MyReminder.Grain/MyReminder.Grain.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="docker\obj\**" />
+    <EmbeddedResource Remove="docker\obj\**" />
+    <None Remove="docker\obj\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.2.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.0.1" />
     <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.4.4">
