--- a/ServerSide/LocalConsoleSiloHost/LocalConsoleSiloHost.csproj
+++ b/ServerSide/LocalConsoleSiloHost/LocalConsoleSiloHost.csproj
@@ -6,11 +6,14 @@
     <LangVersion>7.3</LangVersion>
     <ServerGarbageCollection>true</ServerGarbageCollection>
     <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.CommonLib" Version="1.2.3" />
-    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.Serilog" Version="1.2.3" />
+    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.Serilog" Version="1.1.4" />
+    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.1.4" />
     <PackageReference Include="Microsoft.Orleans.Server" Version="3.0.1" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.1" />
