--- a/ServerSide/LocalConsoleSiloHost/Properties/launchSettings.json
+++ b/ServerSide/LocalConsoleSiloHost/Properties/launchSettings.json
@@ -5,6 +5,9 @@
       "environmentVariables": {
         "GrainLoadPath": "../../../../Grains"
       }
+    },
+    "Docker": {
+      "commandName": "Docker"
     }
   }
 }
