--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   localconsolesilohost:
-    image: ${DOCKER_REGISTRY-}localconsolesilohost
+    image: ${DOCKER_REGISTRY-}localconsolesilohost:${SILO_HOST_VER:-latest}
     build:
       context: .
       dockerfile: ServerSide/LocalConsoleSiloHost/Dockerfile
@@ -16,7 +16,7 @@ services:
       - myreminder_grain
 
   helloworld_grain:
-    image: ${DOCKER_REGISTRY-}helloworld_grain
+    image: ${DOCKER_REGISTRY-}helloworld_grain:${GRAIN_VER_HELLOWORLD:-latest}
     build:
       context: .
       dockerfile: ServerSide/HelloWorld.Grain/docker/Dockerfile
@@ -24,7 +24,7 @@ services:
       - helloworld_grain_volume:/app_grain
 
   myreminder_grain:
-    image: ${DOCKER_REGISTRY-}myreminder_grain
+    image: ${DOCKER_REGISTRY-}myreminder_grain:${GRAIN_VER_MYREMINDER:-latest}
     build:
       context: .
       dockerfile: ./ServerSide/MyReminder.Grain/docker/Dockerfile
@@ -32,7 +32,7 @@ services:
       - myreminder_grain_volume:/app_grain
 
   webclientdemo:
-    image: ${DOCKER_REGISTRY-}webclientdemo
+    image: ${DOCKER_REGISTRY-}webclientdemo:${WEB_CLIENT_VER:-latest}
     build:
       context: .
       dockerfile: ClientSide/WebClientDemo/Dockerfile
