--- a/deploy_conf/docker-compose.yml
+++ b/deploy_conf/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3.4'
+version: '3'
 
-services:
+services: 
   localconsolesilohost:
     image: ${DOCKER_REGISTRY-}localconsolesilohost:${SILO_HOST_VER:-latest}
-    build:
-      context: .
-      dockerfile: ServerSide/LocalConsoleSiloHost/Dockerfile
+    environment:
+      - GrainLoadPath=/grains
+      - ORLEANS_HOST_APP_Orleans__GrainOption__LoadPaths__0={GrainLoadPath}/helloworld_grain/HelloWorld.Grain.dll
+      - ORLEANS_HOST_APP_Orleans__GrainOption__LoadPaths__1={GrainLoadPath}/myreminder_grain/MyReminder.Grain.dll
     volumes:
       - helloworld_grain_volume:/grains/helloworld_grain
       - myreminder_grain_volume:/grains/myreminder_grain
@@ -17,29 +18,31 @@ services:
 
   helloworld_grain:
     image: ${DOCKER_REGISTRY-}helloworld_grain:${GRAIN_VER_HELLOWORLD:-latest}
-    build:
-      context: .
-      dockerfile: ServerSide/HelloWorld.Grain/docker/Dockerfile
     volumes:
       - helloworld_grain_volume:/app_grain
 
   myreminder_grain:
     image: ${DOCKER_REGISTRY-}myreminder_grain:${GRAIN_VER_MYREMINDER:-latest}
-    build:
-      context: .
-      dockerfile: ./ServerSide/MyReminder.Grain/docker/Dockerfile
     volumes:
       - myreminder_grain_volume:/app_grain
 
   webclientdemo:
     image: ${DOCKER_REGISTRY-}webclientdemo:${WEB_CLIENT_VER:-latest}
-    build:
-      context: .
-      dockerfile: ClientSide/WebClientDemo/Dockerfile
+    environment:
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_HTTPS_PORT=${HTTPS_PORT:-443}
+      - Kestrel__Certificates__Default__Path=/root/.dotnet/https/demo-cert.pfx
+      - Kestrel__Certificates__Default__Password=${SSL_PASS}
+    ports:
+      - "${HTTP_PORT:-80}:80"
+      - "${HTTPS_PORT:-443}:443"
+    volumes:
+      - ./ssl_cert/:/root/.dotnet/https/:ro
     networks:
       - orlean_demo
     depends_on: 
       - localconsolesilohost
+
 
 volumes:
   helloworld_grain_volume:
