--- a/ServerSide/LocalConsoleSiloHost/LocalConsoleSiloHost.csproj
+++ b/ServerSide/LocalConsoleSiloHost/LocalConsoleSiloHost.csproj
@@ -11,9 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.CommonLib" Version="1.1.1" />
-    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.Serilog" Version="1.1.1" />
-    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.1.1" />
+    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.CommonLib" Version="1.1.2-beta2" />
+    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.Serilog" Version="1.1.2-beta" />
+    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.1.2-beta" />
     <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.3.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,7 +23,7 @@
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.1" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
-    <PackageReference Include="Serilog.Exceptions" Version="5.3.0" />
+    <PackageReference Include="Serilog.Exceptions" Version="5.3.1" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="2.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
