--- a/ServerSide/MyReminder.Grain/MyReminder.Grain.csproj
+++ b/ServerSide/MyReminder.Grain/MyReminder.Grain.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.1.1" />
+    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.1.2-beta" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.3.5">
       <PrivateAssets>all</PrivateAssets>
