--- a/deploy_conf/parameters.yml
+++ b/deploy_conf/parameters.yml
@@ -1,14 +1,14 @@
-version: '3'
+version: '3.7'
 
 services: 
   localconsolesilohost:
     environment:
-      - ORLEANS_HOST_ENVIRONMENT=Production
-      - ORLEANS_HOST_APP_Orleans__Provider__MongoDB__Cluster__DbConn=mongodb://host.docker.internal:27017
+      - ORLEANS_HOST_ENVIRONMENT=Production      
+      - ORLEANS_HOST_APP_Orleans__Provider__MongoDB__Cluster__DbConn=mongodb://demo_mongo_store:27017
       - ORLEANS_HOST_APP_Orleans__Provider__MongoDB__Cluster__DbName=demo-silo-Clustering
-      - ORLEANS_HOST_APP_Orleans__Provider__MongoDB__Storage__DbConn=mongodb://host.docker.internal:27017
+      - ORLEANS_HOST_APP_Orleans__Provider__MongoDB__Storage__DbConn=mongodb://demo_mongo_store:27017
       - ORLEANS_HOST_APP_Orleans__Provider__MongoDB__Storage__DbName=demo-silo-Storage
-      - ORLEANS_HOST_APP_Orleans__Provider__MongoDB__Reminder__DbConn=mongodb://host.docker.internal:27017
+      - ORLEANS_HOST_APP_Orleans__Provider__MongoDB__Reminder__DbConn=mongodb://demo_mongo_store:27017
       - ORLEANS_HOST_APP_Orleans__Provider__MongoDB__Reminder__DbName=demo-silo-Reminder
     ports:
       - "8210:8210"
@@ -16,4 +16,4 @@ services:
   webclientdemo:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - Orleans__Provider__MongoDB__Cluster__DbConn=mongodb://host.docker.internal:27017
+      - Orleans__Provider__MongoDB__Cluster__DbConn=mongodb://demo_mongo_store:27017
