--- a/ServerSide/LocalConsoleSiloHost/LocalConsoleSiloHost.csproj
+++ b/ServerSide/LocalConsoleSiloHost/LocalConsoleSiloHost.csproj
@@ -11,15 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.CommonLib" Version="1.1.2-beta2" />
-    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.Serilog" Version="1.1.2-beta" />
-    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.1.2-beta" />
-    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.3.5">
+    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.CommonLib" Version="1.1.3" />
+    <PackageReference Include="GranDen.Orleans.NetCoreGenericHost.Serilog" Version="1.1.3" />
+    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.1.3" />
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.3.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Orleans.Server" Version="2.3.5" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.11" />
+    <PackageReference Include="Microsoft.Orleans.Server" Version="2.3.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.12" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.1" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
