--- a/deploy_conf/docker-compose.yml
+++ b/deploy_conf/docker-compose.yml
@@ -4,7 +4,6 @@ services:
   localconsolesilohost:
     image: ${DOCKER_REGISTRY-}localconsolesilohost:${SILO_HOST_VER:-latest}
     environment:
-      - ORLEANS_HOST_APP_Orleans__SiloConfig__AdvertisedIp=172.30.0.3
       - GrainLoadPath=/grains
       - ORLEANS_HOST_APP_Orleans__GrainOption__LoadPaths__0={GrainLoadPath}/helloworld_grain/HelloWorld.Grain.dll
       - ORLEANS_HOST_APP_Orleans__GrainOption__LoadPaths__1={GrainLoadPath}/myreminder_grain/MyReminder.Grain.dll
@@ -12,8 +11,7 @@ services:
       - helloworld_grain_volume:/grains/helloworld_grain
       - myreminder_grain_volume:/grains/myreminder_grain
     networks:
-      orleans-internal:
-        ipv4_address: 172.30.0.3
+      - orleans-internal
     depends_on:
       - helloworld_grain
       - myreminder_grain
@@ -42,8 +40,7 @@ services:
     volumes:
       - ./ssl_cert/:/root/.dotnet/https/:ro
     networks:
-      orleans-internal:
-        ipv4_address: 172.30.0.2
+      - orleans-internal
     depends_on: 
       - localconsolesilohost
       - demo_mongo_store
@@ -53,8 +50,7 @@ services:
     volumes:
       - demo_mongo_db_volume:/data/db
     networks:
-      orleans-internal:
-        ipv4_address: 172.30.0.4
+      - orleans-internal
 
 volumes:
   helloworld_grain_volume:
@@ -63,9 +59,3 @@ volumes:
 
 networks:
   orleans-internal:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 172.30.0.0/24
-      
