--- a/ServerSide/LocalConsoleSiloHost/Properties/launchSettings.json
+++ b/ServerSide/LocalConsoleSiloHost/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "LocalConsoleSiloHost": {
       "commandName": "Project",
       "environmentVariables": {
-        "GrainLoadPath": "../../../../"
+        "GrainLoadPath": "../../../../Grains"
       }
     }
   }
