--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,20 @@ services:
     volumes:
       - helloworld_grain_volume:/grains/helloworld_grain
       - myreminder_grain_volume:/grains/myreminder_grain
+      - numbergenerator_grain_volume:/grains/numbergenerator_grain
     networks:
       - orlean_demo
     depends_on:
       - helloworld_grain
       - myreminder_grain
+      - numbergenerator_grain
       - mongo_store
 
   helloworld_grain:
     image: ${DOCKER_REGISTRY-}helloworld_grain:${GRAIN_VER_HELLOWORLD:-latest}
     build:
       context: .
-      dockerfile: ServerSide/HelloWorld.Grain/docker/Dockerfile
+      dockerfile: ServerSide/Grains/HelloWorld.Grain/docker/Dockerfile
     volumes:
       - helloworld_grain_volume:/app_grain
 
@@ -28,9 +30,17 @@ services:
     image: ${DOCKER_REGISTRY-}myreminder_grain:${GRAIN_VER_MYREMINDER:-latest}
     build:
       context: .
-      dockerfile: ./ServerSide/MyReminder.Grain/docker/Dockerfile
+      dockerfile: ./ServerSide/Grains/MyReminder.Grain/docker/Dockerfile
     volumes:
       - myreminder_grain_volume:/app_grain
+
+  numbergenerator_grain:
+    image: ${DOCKER_REGISTRY-}numbergenerator_grain:${GRAIN_VER_NUMBERGENERATOR:-latest}
+    build:
+      context: .
+      dockerfile: ./ServerSide/Grains/NumberGenerator.Grain/docker/Dockerfile
+    volumes:
+      - numbergenerator_grain_volume:/app_grain
 
   webclientdemo:
     image: ${DOCKER_REGISTRY-}webclientdemo:${WEB_CLIENT_VER:-latest}
@@ -56,4 +66,5 @@ networks:
 volumes:
   helloworld_grain_volume:
   myreminder_grain_volume:
+  numbergenerator_grain_volume:
   mongo_store_volume:
