--- a/deploy_conf/docker-compose.yml
+++ b/deploy_conf/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - GrainLoadPath=/grains
       - ORLEANS_HOST_APP_Orleans__GrainOption__LoadPaths__0={GrainLoadPath}/helloworld_grain/HelloWorld.Grain.dll
       - ORLEANS_HOST_APP_Orleans__GrainOption__LoadPaths__1={GrainLoadPath}/myreminder_grain/MyReminder.Grain.dll
+      - ORLEANS_HOST_APP_Orleans__GrainOption__LoadPaths__2={GrainLoadPath}/numbergenerator_grain/NumberGenerator.Grain.dll
     volumes:
       - type: volume
         source: helloworld_grain_volume
@@ -16,11 +17,16 @@ services:
         source: myreminder_grain_volume
         target: /grains/myreminder_grain
         read_only: true
+      - type: volume
+        source: numbergenerator_grain_volume
+        target: /grains/numbergenerator_grain
+        read_only: true
     networks:
       - orleans_virtual_network
     depends_on:
       - helloworld_grain
       - myreminder_grain
+      - numbergenerator_grain
       - demo_mongo_store
 
   helloworld_grain:
@@ -32,6 +38,11 @@ services:
     image: ${DOCKER_REGISTRY-}myreminder_grain:${GRAIN_VER_MYREMINDER:-latest}
     volumes:
       - myreminder_grain_volume:/app_grain:ro
+
+  numbergenerator_grain:
+    image: ${DOCKER_REGISTRY-}numbergenerator_grain:${GRAIN_VER_NUMBERGENERATOR:-latest}
+    volumes:
+      - numbergenerator_grain_volume:/app_grain
 
   webclientdemo:
     image: ${DOCKER_REGISTRY-}webclientdemo:${WEB_CLIENT_VER:-latest}
@@ -67,4 +78,5 @@ networks:
 volumes:
   helloworld_grain_volume:
   myreminder_grain_volume:
+  numbergenerator_grain_volume:
   demo_mongo_db_volume:
