use 3.7 docker-compose format syntax
update vs container tools nuget

Add missing reference project copy operation

add help text for PowerShell

update nuget packages

Put back the mongo db

put back mongo db service to first compose config file for build docker image script only need on single yml

Format deploy script help

update nuget

buildable

VisitTracker Move to correct path

--- a/ClientSide/WebClientDemo/Dockerfile
+++ b/ClientSide/WebClientDemo/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /src
 COPY ["ClientSide/WebClientDemo/WebClientDemo.csproj", "ClientSide/WebClientDemo/"]
 COPY ["RPC_Share/MyReminder.ShareInterface/MyReminder.ShareInterface.csproj", "RPC_Share/MyReminder.ShareInterface/"]
 COPY ["RPC_Share/HelloWorld.ShareInterface/HelloWorld.ShareInterface.csproj", "RPC_Share/HelloWorld.ShareInterface/"]
+COPY ["RPC_Share/NumberGenerator.ShareInterface/NumberGenerator.ShareInterface.csproj", "RPC_Share/NumberGenerator.ShareInterface/"]
 RUN dotnet restore "ClientSide/WebClientDemo/WebClientDemo.csproj"
 COPY . .
 WORKDIR "/src/ClientSide/WebClientDemo"
