--- a/ServerSide/LocalConsoleSiloHost/Dockerfile
+++ b/ServerSide/LocalConsoleSiloHost/Dockerfile
@@ -1,7 +1,7 @@
-FROM mcr.microsoft.com/dotnet/core/runtime:2.2-stretch-slim AS base
+FROM mcr.microsoft.com/dotnet/core/runtime:3.0-alpine AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0-alpine AS build
 WORKDIR /src
 COPY ["ServerSide/LocalConsoleSiloHost/LocalConsoleSiloHost.csproj", "ServerSide/LocalConsoleSiloHost/"]
 RUN dotnet restore "ServerSide/LocalConsoleSiloHost/LocalConsoleSiloHost.csproj"
