--- a/ServerSide/Grains/MyReminder.Grain/MyReminder.Grain.csproj
+++ b/ServerSide/Grains/MyReminder.Grain/MyReminder.Grain.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <OutputType>Library</OutputType>
     <!--<OrleansCodeGenLogLevel>Trace</OrleansCodeGenLogLevel>-->
   </PropertyGroup>
 
@@ -15,7 +16,7 @@
   <ItemGroup>
     <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.2.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.4.3">
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
