--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -53,13 +53,14 @@
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/ServerSide/LocalConsoleSiloHost/bin/Debug/netcoreapp2.2/LocalConsoleSiloHost.dll",
             "args": [],
-            "env": {
-                "GrainLoadPath": "../"
-            },
             "cwd": "${workspaceFolder}/ServerSide/LocalConsoleSiloHost",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
-            "console": "integratedTerminal",
+            "console": "externalTerminal",
             "stopAtEntry": false,
+            "env": {
+                "ORLEANS_HOST_APP_ENVIRONMENT": "Development",
+                "GrainLoadPath": "../Grains"
+            },
             "sourceLinkOptions": {
                 "https://raw.githubusercontent.com/*": {
                     "enabled": true
