--- a/ServerSide/Grains/HelloWorld.Grain/HelloWorld.Grain.csproj
+++ b/ServerSide/Grains/HelloWorld.Grain/HelloWorld.Grain.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.2.2" />
+    <PackageReference Include="GranDen.Orleans.Server.SharedInterface" Version="1.2.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.0.1" />
-    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.0.0">
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.4.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\RPC_Share\HelloWorld.ShareInterface\HelloWorld.ShareInterface.csproj" />
-    <ProjectReference Include="..\..\..\RPC_Share\VisitTracker.Interface\VisitTracker.Interface.csproj" />
+    <ProjectReference Include="..\..\..\RPC_Share\VisitTracker.ShareInterface\VisitTracker.ShareInterface.csproj" />
   </ItemGroup>
 
 </Project>
